# kosmes-lecture

./: .gitignore  README.md
01-model/: export_onnx.py  pyproject.toml  train.py
01-model/configs/: comparisons.yaml
01-model/eval/: build_report.py  demos.py  gen_featprog.py  gen_featprog_epochs.py  lab_scenario_scan.py  make_lesson_figs.py  ood.py  pick_labelset.py  train_epochprog_nut.py  train_lab_aug.py
01-model/experiments/: build_lesson1_scenario.py  build_study_report.py  lib.py  merge_dataset.py  msd_to_yolo.py  plots.py  run.py
01-model/prepare/: mvtec_to_yolo.py
02-app/: app.spec  pyproject.toml
02-app/src/app/: __init__.py  main.py
02-app/src/app/pipeline/: __init__.py  debounce.py  filters.py  infer.py  roi.py  tracking.py
02-app/src/app/ui/: __init__.py  main_window.py  theme.qss  video_view.py  worker.py
02-app/src/app/widgets/: __init__.py  knob_panel.py
03-db/: detail_doc.md  dump.sql  gen_data.py  schema.sql  seed.sql
docs/: build_datasize_slide.py  build_epochprog_slider.py  lecture-notes.md  lecture-scenario.html  lesson1-scenario.html  lesson1-theory-vision.html  lesson2-scenario.html  lesson2-theory-llm.html  lesson3-db-schema.html
