[project]
name = "kosmes-01-model"
version = "0.1.0"
description = "1교시 - 허블 실습용 비교 모델 준비 (Ultralytics). MVTec 부품 결함 데이터로 학습."
requires-python = ">=3.11"
dependencies = [
    "ultralytics>=8.3.0",
    "onnx>=1.16.0",
    "onnxslim>=0.1.34",
]

# 학습 전용 프로젝트. torch가 끌려와 무겁다 (수백 MB~GB).
# 02-app 과 venv 를 절대 공유하지 말 것 — 패키징 경량화 목적.
